--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div class="header">HEADER</div>
+  <header class="header">HEADER</header>
   <div class="side-panel">SIDE PANEL</div>
   <div class="main"></div>
 </body>
