Side panel toggle

--- a/web/index.html
+++ b/web/index.html
@@ -18,8 +18,14 @@
 </head>
 
 <body>
-  <header class="header">HEADER</header>
-  <div class="side-panel">SIDE PANEL</div>
+  <header class="header">
+    <span class="toggle">=</span>
+    <p>HEADER</p>
+  </header>
+  <div class="side-panel">
+    <p>SIDE PANEL</p>
+    <p class="close">Close me</p>
+  </div>
   <div class="main"></div>
 </body>
 </html>
