--- a/web/index.html
+++ b/web/index.html
@@ -27,5 +27,8 @@
     <p class="close">Close me</p>
   </div>
   <div class="main"></div>
+  <div class="chat-box">
+    <p>CHAT BOX</p>
+  </div>
 </body>
 </html>
