--- a/web/index.html
+++ b/web/index.html
@@ -25,8 +25,15 @@
   <div class="side-panel">
     <p>SIDE PANEL</p>
     <p class="close">Close me</p>
+    <div class="content">
+      wow
+    </div>
   </div>
-  <div class="main"></div>
+  <div class="main">
+  </div>
+  <div class="scrim">
+    ergerge
+  </div>
   <div class="chat-box">
     <p>CHAT BOX</p>
   </div>
